--- a/src/app/student-details/student-details.component.html
+++ b/src/app/student-details/student-details.component.html
@@ -1,8 +1,9 @@
 <!-- <app-sidenavbar></app-sidenavbar> -->
+
 <h1>Student Register Details</h1>
 
 <div class="card-product">
-    <table class="table ">
+    <table class="table table-striped">
   
         <thead>
             <th>NAME</th>
