--- a/src/app/holiday/holiday.component.scss
+++ b/src/app/holiday/holiday.component.scss
@@ -12,6 +12,7 @@ h2{
     margin-left: 350px;
     width:50% ;
     margin-top: 100px;
+    border: 2px solid black;
     // background-color: rgb(14, 74, 111);
 
 }
@@ -23,7 +24,8 @@ h2{
 th {
     font-size: 20px;
     // border: 1px solid black;
-
+    color:rgb(28, 57, 106);;
+    // text-align: center;
     }
 
     // td{
