--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,37 +1,55 @@
-
-input,label,select{
+input,
+label {
     margin-top: 10px;
-    margin-left: 10px;
+    margin-left: 45px;
+    width:70%;
+    // padding:20px;
 }
+// .form-control-label{
+// //    margin-right:;
+// }
 
-label{
+label,
+a
+ {
     color: white;
 }
 
+h2 {
 
-h2{
-    margin-top:20px;
-    margin-left: 100px;
+  
     text-align: center;
-    background-color: rgb(240, 255, 80);
-    border: 2px solid black;
-    width: 70%;
-    height: 50px;
-    color:black;
+    font-size: 40px;
+    color: white;
 }
-.container{
-    margin-left: 290px;
-    border: 2px solid black;
-    width:50% ;
-    background-color: rgb(14, 74, 111); 
 
+.container {
+    
+    margin-left: 450px;
+    border: 2px solid white;
+    width: 40%;
+    padding: 40px;
+    background-image: linear-gradient(to right, rgb(47, 132, 178) , rgb(124, 134, 254));
+    // background-image: linear-gradient(to right, rgb(22, 101, 143) , rgb(222, 223, 233));
     // https://www.powershow.com/view0/917f9b-NDVjY/Vidyalaya-School_Management_Software_1_powerpoint_ppt_presentation
 }
-button{
+
+button {
     margin: 10px 0px;
-    margin-left: 250px;
-    background-color: rgb(240, 255, 80);
-    color:black;
+    margin-left: 180px;
+    color: black;
     width: 30%;
     height: 50px;
+    // color: white;
+    background-color: rgb(246, 246, 246);
+
+}
+
+.outer{
+    padding-top: 1%;
+    // height: 100vh;
+    // background-color: rgb(55, 12, 48);
+    background:url('https://st2.depositphotos.com/1010652/10744/v/950/depositphotos_107447708-stock-illustration-back-to-school-background.jpg');
+    background-position: center;
+    background-size: cover;
 }
