--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -1,15 +1,4 @@
-<!-- <mat-drawer-container>
-     <mat-drawer mode="side" opened="true">
-      <app-sidenavbar></app-sidenavbar>
-    </mat-drawer>
-    <mat-drawer-content>
 
-    </mat-drawer-content>
-  
-  </mat-drawer-container> -->
-  
-   <!-- <mat-drawer mode="side" opened="true">
-    <app-sidenavbar></app-sidenavbar> -->
    <mat-drawer-container>
      <mat-drawer mode="side" opened="true">
       <mat-nav-list>
@@ -30,17 +19,15 @@
             <mat-icon>assignment_ind</mat-icon>Reference
           </a>
         
-          <a mat-list-item routerLink="/user" routerLinkActive="list-item-active"(click)="logout()" >
+          <!-- <a mat-list-item routerLink="/user" routerLinkActive="list-item-active"(click)="logout()" >
             <mat-icon>logout</mat-icon>Logout
-          </a>
+          </a> -->
         </mat-nav-list>   
     </mat-drawer>
     <mat-drawer-content>
-      <div class="scrolling"></div>
-     
-        <!-- <div id="scroll-text">This is scrolling text.<div> -->
-      <app-dashboard></app-dashboard>
+      <app-header></app-header>
 
+      <app-dashboard></app-dashboard>
     </mat-drawer-content>
   
   </mat-drawer-container>
