--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,39 +1,50 @@
-.container{
+.container {
     padding: 30px;
-    margin-top: 100px;
-    background-color: #293b64;
-    width:40%;
-    background-image:url('../../assets/background.png');
+    width: 40%;
+    // background-color: rgb(49, 115, 151);
+    background-image: linear-gradient(to right, rgb(47, 132, 178) , rgb(124, 134, 254));
     background-position: center;
     background-size: cover;
+    border: 1px solid white;
 }
 
-div{
-    margin-top:20px;
-    // margin-left:50px;
+.outer {
+    // margin-top: 1px;
+    padding-top: 10%;
+    height: 100vh;
+    background: url('https://st2.depositphotos.com/1010652/10744/v/950/depositphotos_107447708-stock-illustration-back-to-school-background.jpg');
+    // background-color: rgb(49, 115, 151);
+    // background-image: linear-gradient(to right, rgb(59, 101, 180) , rgb(222, 223, 233));
 }
-input,select{
+
+a {
+    color: white
+}
+
+input,
+select {
     padding: 10px;
     width: 100%;
-    height:50px;  
+    // height:50px;  
     background-color: rgb(255, 255, 255);
 }
-label{
+
+label {
     padding: 10px;
     color: rgb(232, 232, 232);
     font-size: large;
 }
+
 // select{
 //     width: 98%;
 //     height: 50px;
 //     // margin-left: 15px;
 // }
-button{
+button {
     background-color: rgb(246, 246, 246);
     width: 30%;
     color: #000;
     margin-left: 180px;
-    height:50px; 
+    height: 50px;
     border-radius: 20px;
 }
-
