--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,17 @@
 <mat-toolbar>
-    <mat-toolbar-row class="justify-content">
-      <!-- <button mat-menu-item>
-        <mat-icon>exit_to_app</mat-icon>
-        Logout
-      </button> -->
-      <button mat-list-item routerLink="/user" routerLinkActive="list-item-active"(click)="logout()" >
-        <mat-icon>logout</mat-icon>Logout
+  <mat-toolbar-row class="justify-content">
+    
+    <div class="row mr-2 ml-auto">
+      <button mat-button class="user mt-2 d-flex align-items-center">
+        <img src="./assets/profile.png" alt="" class="user-image mr-1 p-2">{{name}}
       </button>
+    </div>
 
-       
-    </mat-toolbar-row>
+    <div class="log">
+      <button class="logout " mat-list-item routerLink="/user" routerLinkActive="list-item-active"
+        (click)="logout()">Logout
+      </button>
+    </div>
+
+  </mat-toolbar-row>
 </mat-toolbar>
