--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -19,14 +19,13 @@
             <mat-icon>assignment_ind</mat-icon>Reference
           </a>
         
-          <!-- <a mat-list-item routerLink="/user" routerLinkActive="list-item-active"(click)="logout()" >
-            <mat-icon>logout</mat-icon>Logout
-          </a> -->
+          <a mat-list-item routerLink="/file" routerLinkActive="list-item-active">
+            <mat-icon>view_list</mat-icon>Time Table
+          </a>
         </mat-nav-list>   
     </mat-drawer>
     <mat-drawer-content>
       <app-header></app-header>
-
       <app-dashboard></app-dashboard>
     </mat-drawer-content>
   
