--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,8 +1,22 @@
- button{
-    margin-left: 90%;
-    width: 100px;
-color: white;
- }
- .justify-content{
+.justify-content{
     background-color:rgb(28, 57, 106);
  }
+.row{
+  margin-left: 970px;
+  color:white
+}
+.user-image {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  &-icon {
+    height: 18px;
+    font-size: 16px;
+  }
+}
+.log{
+  color:white;
+  font-size: 16px;
+  margin-left: 25px;
+  height: 25px;
+}
