--- a/src/app/holiday/holiday.component.scss
+++ b/src/app/holiday/holiday.component.scss
@@ -1,44 +1,29 @@
-h2{
+h2 {
     font-size: 50px;
-    background:rgb(14, 74, 111);
+    background: rgb(14, 74, 111);
     text-align: center;
     color: white;
     padding: 20px;
 
 }
-.card-product{
+
+.card-product {
     margin: 10px;
-    padding:20px;
+    padding: 20px;
     margin-left: 350px;
-    width:50% ;
+    width: 50%;
     margin-top: 100px;
     border: 2px solid black;
-    // background-color: rgb(14, 74, 111);
-
 }
-.back{
+
+.back {
     float: right;
     margin-right: 440px;
     width: 100px;
 }
+
 th {
     font-size: 20px;
-    // border: 1px solid black;
-    color:rgb(28, 57, 106);;
-    // text-align: center;
-    }
-
-    // td{
-    //         width: 1000px;
-    //         // resize: none;
-           
-    //     }
-
-
-            // table,th,tr,td {
-            //     margin: 15px;
-            //     text-align: center;
-                // border: 1px solid black;
-            // }
-        
-
+    color: rgb(28, 57, 106);
+    ;
+}
