--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="log">
-      <button class="logout " mat-list-item routerLink="/user" routerLinkActive="list-item-active"
+      <button class="logout " mat-list-item routerLink="/" routerLinkActive="list-item-active"
         (click)="logout()">Logout
       </button>
     </div>
