--- a/src/app/holiday/holiday.component.html
+++ b/src/app/holiday/holiday.component.html
@@ -8,7 +8,7 @@
 
         <tbody>
             <tr *ngFor="let i of userList">
-                <td>{{i.date}}</td>
+                <td>{{i.date.slice(0,10)}}</td>
                 <td>{{i.descrip}}</td>
 
                 <td>
@@ -25,8 +25,7 @@
 
 </div>
 <div>
-    <button [routerLink]="['/updateHoliday']" [hidden]="rolePlay==='false'" class="back btn btn-success">Add
-        New</button>
+    <button [routerLink]="['/updateHoliday']" [hidden]="rolePlay==='false'" class="back btn btn-success">Add New</button>
     <button class="back btn btn-secondary" (click)="back()">Back</button>
 </div>
 
