--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,15 +2,15 @@
 
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="assets/pic2.jpg" class="w-75" d-block w-75 h-75 alt="...">
+      <img src="assets/pic2.jpg" class="w-75" w-75 h-75 alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/pic1.jpg" class="w-75 " d-block w-75 h-75 alt="...">
+      <img src="assets/pic1.jpg" class="w-75 " w-75 h-75 alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/student.jpg" class="w-75" d-block w-75 h-75 alt="...">
+      <img src="assets/student.jpg" class="w-75" w-75 h-75 alt="...">
     </div>
 
   </div>
