--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,14 +25,14 @@
           <small class="text-danger" [class.d-none]="phone.valid || phone.untouched"
             *ngIf="phone.errors['required']">Phone number is required</small>
           <small class="text-danger" [class.d-none]="phone.valid || phone.untouched"
-            *ngIf="phone.errors['pattern']">Phone number should be 10 digits</small>
+            *ngIf="phone.errors['pattern']">Phone number should contain 10 digits</small>
         </div>
       </div>
 
       <div class="form-group">
         <label>EMAIL</label>
         <input type="text" #email="ngModel"
-          pattern="([a-zA-Z0-9-_\.]+)@([a-zA-Z0-9]+)\.([a-zA-Z]{2,5})(\.[a-zA-Z]{2,5})?$" class="form-control" required
+          pattern="([a-z0-9-_\.]+)@([a-z0-9]+)\.([a-z]{2,5})(\.[a-z]{2,5})?$" class="form-control" required
           [class.is-invalid]="email.invalid && email.touched" name="email" [(ngModel)]="userModel.email">
         <div *ngIf="email.errors && (email.invalid || email.touched)">
           <small class="text-danger" [class.d-none]="email.valid || email.untouched"
@@ -44,10 +44,10 @@
 
       <div class="form-group">
         <label>GENDER</label><br>
-        <label for="" class="form-control-label"><input type="radio" name="gender" #gender value="male"
-            [(ngModel)]="userModel.gender" required #Gender="ngModel">&nbsp;Male</label>&nbsp;
-        <label for="" class="form-control-label"><input type="radio" name="gender" #gender value="female"
-            [(ngModel)]="userModel.gender" required #Gender="ngModel">&nbsp;Female</label>
+        <label class="form-control-label"><input type="radio" name="gender" #gender value="male"
+            [(ngModel)]="userModel.gender" required #Gender="ngModel">Male</label>&nbsp;
+        <label class="form-control-label"><input type="radio" name="gender" #gender value="female"
+            [(ngModel)]="userModel.gender" required #Gender="ngModel">Female</label>
       </div><br>
 
 
@@ -75,7 +75,6 @@
       <small class="text-danger" *ngIf="!conform()"
         [class.d-none]="Confirmpassword.valid || Confirmpassword.untouched">Mismatch Password</small>
       <br><br>
-
 
       <button [disabled]="userForm.form.invalid" (click)="userdata(userForm)">SUBMIT</button>
       <br><a href="/user">Already Registered?</a>
